feat: Add note pinning system, on-screen HUD, and config refactor
- Introduced a pinning system to keep one Note and one Build at the top of the GUI lists.
- Added an onscreen HUD (`PinnedNoteHud`) to display the currently pinned note during gameplay.
- Refactored config management with `ConfigManager` and `ModConfig`, replacing the old ColorConfig-only system.
- Added HUD customization options to `config.json` (positioning, width/height percentages, padding).
- Fixed and improved text selection rendering in `MultiLineTextFieldWidget` to properly highlight multiline text and empty stubs.
- Updated `MainScreen` to include a dynamic Pin/Unpin button.
- Overhauled `NoteListWidget` and `BuildListWidget` UI layouts to cleanly display "Pinned" and "Scope" text indicators.